--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -39,7 +39,7 @@
     
 
     <!-- Styles -->
-    <link rel="stylesheet" href="vrtstyles.css"> <!-- External CSS File -->
+    <link rel="stylesheet" href="vrtstyle.css"> <!-- External CSS File -->
     
 </head>
 <body>
