--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <section id="about">
         <!-- Replace with "About Me" content -->
         <h2>About Me</h2>
-        <p>Who I Am
+        <p>Who I Am<br>
 I’m <strong>Vickessy Rainson</strong> founder of <strong>Vrainsie Tech</strong>. A passionate and skilled software and web developer with a focus on building efficient, user-friendly, and scalable digital solutions. With years of hands-on experience, I specialize in leveraging my expertise in core technologies such as HTML, CSS, JavaScript, PHP, and MySQLi to create dynamic and scalable native websites and applications that deliver exceptional performance and meet diverse client needs while being user-friendly.</p>
     </section>
 
