--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ Achieved a 30% faster loading time using optimized queries and minimized code.
         <h2>Key Accomplishments</h2>
         <p>Successfully delivered over 50+ projects, ranging from simple landing pages to complex web applications.</p>
         <p>Reduced server response times by 25% in multiple projects through query optimization and effective back-end logic.</p>
-        <p>Enhanced user retention by implementing intuitive UI/UX designs and interactive features.</p>
+        <p>Enhanced user retention by implementing intuitive UI/UX designs and interactive features.</p><br><br>
 
         <h2>Why collarborate/hire me</h2>
         
