--- a/index.html
+++ b/index.html
@@ -72,23 +72,25 @@ I’m <strong>Vickessy Rainson</strong> founder of <strong>Vrainsie Tech</strong
             Back-End Development.<br>
             Full-Stack Projects.<br>
         </p>
-
+<div class="project">
 <h3>Front-End Development</h3>
 
 <p><strong>Responsive Web Design:</strong> I craft visually appealing, mobile-first designs that provide seamless user experiences across all devices.</p>
-
+<br>
 <p><strong>JavaScript Expertise:</strong> I bring interactivity to web pages using advanced JavaScript techniques, including DOM manipulation, event handling, and AJAX for dynamic content loading.</p>
-
+<br>
 <p><strong>CSS Mastery:</strong> Proficient in modern CSS (including Flexbox and Grid), ensuring elegant layouts and animations that enhance usability and branding.</p>
-
+</div>
+<div class="project">
 <h3>Back-End Development</h3>
 <p><strong>PHP Development:</strong>From building robust REST APIs to implementing dynamic server-side logic, I ensure high-performance web applications.</p>
 <p><strong>MySQLi Database Management:</strong>Skilled in designing and optimizing databases, writing complex queries, and ensuring secure data handling.</p>
-
+</div>
+<div class="project">
 <h3>Full-Stack Projects</h3>
 
 <p>Combining front-end and back-end skills, I deliver full-stack solutions tailored to client goals. My workflows prioritize scalability, security, and performance optimization.</p>
-
+</div>
     </section>
 
     <!-- Portfolio Section -->
@@ -128,7 +130,7 @@ Achieved a 30% faster loading time using optimized queries and minimized code.
         <h3>Key Accomplishments</h3>
         <p>Successfully delivered over 50+ projects, ranging from simple landing pages to complex web applications.</p>
         <p>Reduced server response times by 25% in multiple projects through query optimization and effective back-end logic.</p>
-        <p>Enhanced user retention by implementing intuitive UI/UX designs and interactive features.</p><br><br>
+        <p>Enhanced user retention by implementing intuitive UI/UX designs and interactive features.</p>
 
         <h3>Why collarborate/hire me</h3>
         
