--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ Achieved a 30% faster loading time using optimized queries and minimized code.
         <h2>Contact Me</h2>
         <p><strong>Email: </strong>vrainsietech@gmail.com</p>
         <p><strong>Phone: </strong>+254112988442</p>
-        <p><strong>Github: </strong><a href="https://github.com/VrainsieTech">@VrainsieTech</a></p>
+        <p><strong>Github: </strong><a href="#">@VrainsieTech</a></p>
     </section>
 
     <!-- Footer -->
