--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ Achieved a 30% faster loading time using optimized queries and minimized code.
         <p>Reduced server response times by 25% in multiple projects through query optimization and effective back-end logic.</p>
         <p>Enhanced user retention by implementing intuitive UI/UX designs and interactive features.</p>
 
-        <h3>Why collarborate/hire me</h3>
+        <h3>Why collarborate/hire me?</h3>
         
             <p>
             <strong>Custom Solutions:</strong> Every project I take on is uniquely tailored to client needs, ensuring high satisfaction and business alignment.</p>
