--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 <body>
     <!-- Header -->
     <header>
+        <img src="assets/vrtporthdr.png">
         <h1>Vickessy Rainson</h1>
         <p>Full-Stack Web Developer | Delivering Scalable and Interactive Solutions</p>
     </header>
