--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -55,12 +55,14 @@
         <h1>Vrainsie Tech</h1>
         <p>Public Privacy Policy</p>
     </header>
-
+    <section>
   <p>Effective Date: November 28, 2024</p>
     <p>
         Welcome to Vrainsie Tech! Your privacy is important to us. This Privacy Policy outlines how we collect, use, and protect your personal information when you use our applications and services, including those that integrate Google Sign-In.
     </p>
+    </section>
 
+     <section>
     <h2>1. Information We Collect</h2>
     <p>We may collect the following types of information when you use our services:</p>
     <ul>
@@ -68,7 +70,9 @@
         <li><strong>Usage Data:</strong> Details about your interactions with our applications, such as visited pages, clicked links, and time spent on services.</li>
         <li><strong>Additional Data:</strong> Depending on the specific application, we may collect location data, preferences, or other information you voluntarily provide.</li>
     </ul>
+    </section>
 
+     <section>
     <h2>2. How We Use Your Information</h2>
     <p>We use your information for the following purposes:</p>
     <ul>
@@ -77,7 +81,9 @@
          <li>To communicate with you about updates, offers, or changes to our services.</li>
         <li>To ensure security and prevent fraud.</li>
     </ul>
+     </section>
 
+    <section>
     <h2>3. Sharing Your Information</h2>
     <p>We value your trust and do not sell or rent your information to third parties. However, we may share your data in the following situations:</p>
     <ul>
@@ -85,10 +91,14 @@
         <li>When required by law or in response to valid legal requests.</li>
         <li>To protect the rights, property, or safety of Vrainsie Tech, our users, or the public.</li>
     </ul>
+    </section>
 
+     <section>
     <h2>4. Data Retention</h2>
     <p>We retain your data only as long as necessary to provide our services or as required by law. You can request the deletion of your data at any time (see "Your Rights" below).</p>
+     </section>
 
+    <section>
     <h2>5. Your Rights</h2>
     <p>You have the following rights regarding your data:</p>
     <ul>
@@ -100,12 +110,16 @@
    <p>
         To exercise these rights, please contact us using the details provided in the "Contact Us" section below.
     </p>
+    </section>
 
+    <section>
     <h2>6. Security</h2>
     <p>
         We implement industry-standard measures to protect your data. However, no method of transmission over the Internet or electronic storage is 100% secure, and we cannot guarantee absolute security.
     </p>
+    </section>
 
+    <section>
     <h2>7. Third-party Links</h2>
     <p>
         Our applications may include links to third-party websites or services. We are not responsible for the privacy practices of these external sites. We encourage you to review their privacy policies before providing them with your information.
@@ -115,12 +129,23 @@
     <p>
         We may update this Privacy Policy from time to time to reflect changes in our practices or for other operational, legal, or regulatory reasons. We will notify you of any material changes by posting the updated policy on our website.
     </p>
-
-    <h2>9. Contact Us</h2>
+    </section>
+    
+        <!-- Contact Section -->
+    <section id="contact">
+        <h2>Contact Us</h2>
         <p>
         If you have any questions or concerns about this Privacy Policy, or wish to exercise your rights, please contact us at:
     </p>
-    <p class="contact">Email: vrainsietech@gmail.com</p>
-    <p class="contact">Phone: +254-112-988-442</p>
-    <p class="contact">Address: Nairobi, Kenya</p>
+        <p><strong>Email: </strong>vrainsietech@gmail.com</p>
+        <p><strong>Phone: </strong>+254-112-988-442</p>
+        <p><strong>Github: </strong><a href="#">@VrainsieTech</a></p>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 Vrainsie Tech. All Rights Reserved.</p>
+    </footer>
+</body>
+</html>
 
