--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -149,3 +149,21 @@
         We may update these Terms from time to time to reflect changes in our practices or applicable laws. By continuing to use our Services after such updates, you agree to the revised Terms.
     </p>
         </section>
+
+          <!-- Contact Section -->
+    <section id="contact">
+        <h2>Contact Us</h2>
+        <p>
+        If you have any questions or concerns about this Terms of Service, or wish to exercise your rights, please contact us at:
+    </p>
+        <p><strong>Email: </strong>vrainsietech@gmail.com</p>
+        <p><strong>Phone: </strong>+254-112-988-442</p>
+        <p><strong>Github: </strong><a href="#">@VrainsieTech</a></p>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 Vrainsie Tech. All Rights Reserved.</p>
+    </footer>
+</body>
+</html>
