--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -124,7 +124,8 @@
     <p>
         Our applications may include links to third-party websites or services. We are not responsible for the privacy practices of these external sites. We encourage you to review their privacy policies before providing them with your information.
     </p>
-
+    </section>
+     <section>
     <h2>8. Changes to This Privacy Policy</h2>
     <p>
         We may update this Privacy Policy from time to time to reflect changes in our practices or for other operational, legal, or regulatory reasons. We will notify you of any material changes by posting the updated policy on our website.
